--- a/13_vue/01_Template/05_Conditional.html
+++ b/13_vue/01_Template/05_Conditional.html
@@ -39,14 +39,35 @@
     </div>
 
     <!--
+        v-if & v-else-if & v-else
+        if 조건부로 블록을 렌더링 한느데 지시자의 식이 참인 경우 if 블록을 렌더링하게 된다.
+        그러나 if 블록의 지시자의 식이 참이 아닌 경우 else 블록이 렌더링 된다.
 
+        항상 if와 연관 있는 곳에 배치해야 한다.
     -->
     <div id="step03">
         <h1 v-if="awesome == 'awesome'">Vue is awesome!</h1>
+        <!-- 앞 awesome은 변수 'awesome'은 문자열 전체를 ''로 감쌀 거면 안 문자열은 ""으로 하고 그 반대도 가능 -->
         <h1 v-else-if="awesome == 'good'">hello</h1>
         <h1 v-else>Oh no!</h1>
         <button @click="setToggle">toggle</button>
     </div>
+
+
+    <!-- template : 덩어리로 감싸고 나오지는 않게 함 -->
+    <!-- 
+        <template>
+        v-if는 조건에 따라 특정 요소들을 렌더링하거나 제거하는 데에 사용된다.
+        그러나 요소를 렌더링하는 과정에 요소들을 감싸주는 부모 요소가 필요하지 않을 수 있다.
+        이러한 경우 template을 이용하여 부모 요소가 없이 그룹화 하는 것이 가능해진다.    
+    -->
+    <div id="step04">
+        <template v-if="isTrue">
+            <h1>awesome</h1>
+            <h2>good</h2>
+        </template>
+    </div>
+
 
     <script>
         const {createApp, ref, reactive} = Vue;
@@ -102,6 +123,20 @@
                 }
             }
         }).mount('#step03');
+
+
+        createApp({
+            setup() {
+
+                // 관리해야 되는 값 쓰기 = isTrue
+                const isTrue = ref(true);
+
+                return {
+                    isTrue
+                }
+            }
+        }).mount('#step04');
+
     </script>
 </body>
 </html>
